// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 1`] = `
Object {
  "description": "Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 2`] = `
Object {
  "yllapito S3 files Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella": Object {
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "NAHTAVILLAOLOKUULUTUS",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 3`] = `
Object {
  "description": "Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 4`] = `
Object {
  "yllapito S3 files Nähtävilläolovaihejulkaisu saamenkielisellä kuulutuksella ja ilmoituksella ylläpidossa": Object {
    "/1/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "NAHTAVILLAOLOKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T415%20Ilmoitus%20kiinteistonomistajille%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KIINTEISTOJEN_OMISTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "fileType": "AINEISTO",
    },
    "/1/aineisto.zip": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "application/octet-stream",
      "checksum": "ABC123",
    },
    "/1/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
    },
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "NAHTAVILLAOLOKUULUTUS",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 5`] = `
Object {
  "description": "Julkisen nähtävilläolovaiheen saamenkieliset PDFt",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 6`] = `
Object {
  "public S3 files Nähtävilläolovaihejulkaisu saamenkielisellä kuulutuksella ja ilmoituksella kansalaisille": Object {
    "/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "NAHTAVILLAOLOKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T415%20Ilmoitus%20kiinteistonomistajille%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KIINTEISTOJEN_OMISTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "expirationDate": "2040-01-01T23:59:59+02:00",
      "fileType": "AINEISTO",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/aineisto.zip": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "application/octet-stream",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_NAHTAVILLAOLOKUULUTUKSESTA_KUNNILLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "NAHTAVILLAOLOKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 7`] = `
Object {
  "description": "publicProjekti nahtavillaoloVaiheJulkinenAfterAsetaUudelleenkuulutettavaksi",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/3/nahtavillaolo/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 1.1.2040 mennessä.

Muistutuksen voi tehdä osoitteessa <a href=\\"***unittest***</a> tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/3/2022.",
        ],
        "kuvausTekstit": Array [
          "Uudenmaan ELY-keskus on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §).",
          "Suunnitelma pidetään nähtävillä <strong>7.6.2022 - 1.1.2040</strong> osoitteessa <a href=\\"https://localhost:3000/s/0894/nahtavillaolo\\">https://localhost:3000/s/0894/nahtavillaolo</a>.",
        ],
        "leipaTekstit": Array [
          "Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 3.",
        ],
        "tietosuoja": "Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely\\">https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2040-01-01",
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "geoJSON": undefined,
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "kuvaus": undefined,
        "linkki": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Matti",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "123456789",
          "sahkoposti": "Matti.Meikalainen@vayla.fi",
          "sukunimi": "Meikalainen",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 8`] = `
Object {
  "description": "testVaiheAfterSiirraUudelleenkuulutettavaksi",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "aineistopaketti": "/nahtavillaolo/1/aineisto.zip",
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2040-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "muokkausTila": "MUOKKAUS",
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": undefined,
        "selosteLahetekirjeeseen": undefined,
        "tila": "JULKAISTU_PERUUTETTU",
      },
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 9`] = `
Object {
  "description": "testJulkaisuAfterUudelleenkuulutus",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "nahtavillaoloVaiheJulkaisu": Object {
      "__typename": "NahtavillaoloVaiheJulkaisu",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "aineistopaketti": "/nahtavillaolo/1/aineisto.zip",
      "asianhallintaSynkronointiTila": "EI_TESTATTAVISSA",
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPaiva": "2040-06-01",
      "kuulutusVaihePaattyyPaiva": "2040-07-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "maanomistajaluettelo": "/nahtavillaolo/2/maanomistajaluettelo.xlsx",
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "muokkaaja": "A000111",
      "nahtavillaoloPDFt": Object {
        "SUOMI": Object {
          "__typename": "NahtavillaoloPDF",
          "nahtavillaoloIlmoitusKiinteistonOmistajallePDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloIlmoitusPDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloPDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        },
        "__typename": "NahtavillaoloPDFt",
      },
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": Object {
          "SUOMI": "Kuulutetaan uudelleen lähetekirjeteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "linkitetytProjektit": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Matti",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "123456789",
          "sahkoposti": "Matti.Meikalainen@vayla.fi",
          "sukunimi": "Meikalainen",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 10`] = `
Object {
  "description": "testJulkaisuAfterUudelleenkuulutus",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "nahtavillaoloVaiheJulkaisu": Object {
      "__typename": "NahtavillaoloVaiheJulkaisu",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "aineistopaketti": "/nahtavillaolo/1/aineisto.zip",
      "asianhallintaSynkronointiTila": "EI_TESTATTAVISSA",
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "hyvaksyja": "A000112",
      "hyvaksymisPaiva": "***unittest***",
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPaiva": "2040-06-01",
      "kuulutusVaihePaattyyPaiva": "2040-07-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "lahetekirje": Object {
        "nimi": "lähetekirje.eml",
        "tiedosto": "/nahtavillaolo/2/lähetekirje.eml",
        "tila": "VALMIS",
        "tuotu": "2040-01-01T00:00",
        "uuid": "00000006-2631-4d4f-9d26-c792007df5d2",
      },
      "maanomistajaluettelo": "/nahtavillaolo/2/maanomistajaluettelo.xlsx",
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "muokkaaja": "A000111",
      "nahtavillaoloPDFt": Object {
        "SUOMI": Object {
          "__typename": "NahtavillaoloPDF",
          "nahtavillaoloIlmoitusKiinteistonOmistajallePDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloIlmoitusPDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloPDFPath": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        },
        "__typename": "NahtavillaoloPDFt",
      },
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": Object {
          "SUOMI": "Kuulutetaan uudelleen lähetekirjeteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "linkitetytProjektit": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Matti",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "123456789",
          "sahkoposti": "Matti.Meikalainen@vayla.fi",
          "sukunimi": "Meikalainen",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 11`] = `
Object {
  "description": "testLuonnosAfterUudelleenkuulutus",
  "mockedtime": "2040-01-01T00:00",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "aineistopaketti": "/nahtavillaolo/1/aineisto.zip",
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2040-06-01",
      "kuulutusVaihePaattyyPaiva": "2040-07-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "muokkausTila": "LUKU",
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "uudelleenKuulutus": null,
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 12`] = `
Object {
  "description": "publicProjekti nahtavillaoloVaiheJulkinenAfterHyvaksyUudelleenKuulutus",
  "mockedtime": "2040-06-01T00:00",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/3/nahtavillaolo/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2040-06-01",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 1.7.2040 mennessä.

Muistutuksen voi tehdä osoitteessa <a href=\\"***unittest***</a> tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen uudenmaan_kirjaamo@uudenmaan.ely. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/3/2022.",
        ],
        "kuvausTekstit": Array [
          "Uudenmaan ELY-keskus on 1.6.2040 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §).",
          "Suunnitelma pidetään nähtävillä <strong>1.6.2040 - 1.7.2040</strong> osoitteessa <a href=\\"https://localhost:3000/s/0894/nahtavillaolo\\">https://localhost:3000/s/0894/nahtavillaolo</a>.",
        ],
        "leipaTekstit": Array [
          "Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 3.",
        ],
        "tietosuoja": "Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely\\">https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2040-07-01",
      "muistutusoikeusPaattyyPaiva": "2022-06-08",
      "nahtavillaoloSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-2631-4d4f-9d26-c792007df5d2",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-2631-4d4f-9d26-c792007df5d2",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": null,
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "geoJSON": undefined,
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "kuvaus": undefined,
        "linkki": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Matti",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "123456789",
          "sahkoposti": "Matti.Meikalainen@vayla.fi",
          "sukunimi": "Meikalainen",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  },
}
`;
